# maneuvering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: linear_coplanar.ipynb  linear_coplanar_lecture.ipynb  linear_noncoplanar_lecture.ipynb  one_impulse_maneuvers_lecture.ipynb
src/maneuvering/: __init__.py  types.py  typing.py
src/maneuvering/dynamics/: kepler.py
src/maneuvering/guidance/: lambert.py
src/maneuvering/maneuvers/: __init__.py  apply_impulse.py  maneuver.py
src/maneuvering/maneuvers/quasi_circular/: reference_orbit.py
src/maneuvering/maneuvers/quasi_circular/transition/: analytical_transition.py  coplanar.py  execute.py
src/maneuvering/maneuvers/quasi_circular/transition/coplanar/: coplanar.py
src/maneuvering/maneuvers/quasi_circular/transition/noncoplanar/: intersection_angle.py  (+1 more)
src/maneuvering/orbit/: __init__.py  cartesian.py  convert.py  convert_kep.py  convert_kep_cart.py  distance.py  keplerian.py  orbital_system.py  propagate.py  utils.py
src/maneuvering/utils/: math_tools.py  normal_vector.py  periapsis_vector.py
tests/: test_kepler.py  test_lambert.py
tests/maneuvers/: test_apply_impulse.py
tests/maneuvers/quasi_circular/transition/: test_coplanar.py  test_execute.py  test_system_residuals.py
tests/maneuvers/quasi_circular/transition/coplanar/: test_coplanar.py
tests/maneuvers/quasi_circular/transition/noncoplanar/: test_intersection_angle.py  test_noncoplanar.py
tests/orbit/: convert.py  test_convert.py  test_convert_kep.py  test_convert_kep_cart.py  test_distance.py  test_propagate.py
