[project]
name = "maneuvering"
version = "0.1.0"
description = "Library for spacecraft maneuvering algorithms"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vladimir Chinyaev" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[tool.pytest.ini_options]
addopts = "-q --cov=maneuvering --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","N","B","UP","W"]
lint.ignore = ["E501"]
format.preview = true

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
